--- a/BioMedical Image Analysis.ipynb
+++ b/BioMedical Image Analysis.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import ImageIO\n",
     "import imageio\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -196,6 +197,92 @@
    "metadata": {},
    "source": [
     "- Manipulating cmap, vmin, and vmax will give you the flexibility to plot all types of data. Remember, though, that they only affect the plot and not the underlying data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stack images\n",
+    "- Image \"stacks\" are a useful metaphor for understanding multi-dimensional data. Each higher dimension is a stack of lower dimensional arrays.\n",
+    "- We will use NumPy's stack() function to combine several 2D arrays into a 3D volume. By convention, volumetric data should be stacked along the first dimension: `vol[plane, row, col]`\n",
+    "- Note: performing any operations on an ImageIO Image object will convert it to a numpy.ndarray, stripping its metadata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Volume dimensions: (3, 512, 512)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read in each 2D image\n",
+    "im1 = imageio.imread('data/chest-ct/chest-220.dcm')\n",
+    "im2 = imageio.imread('data/chest-ct/chest-221.dcm')\n",
+    "im3 = imageio.imread('data/chest-ct/chest-222.dcm')\n",
+    "\n",
+    "# Stack images into a volume\n",
+    "vol = np.stack([im1, im2, im3], axis=0)\n",
+    "print('Volume dimensions:', vol.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load volumes\n",
+    "- ImageIO's volread() function can load multi-dimensional datasets and create 3D volumes from a folder of images. It can also aggregate metadata across these multiple images."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading DICOM (examining files): 1/5 files (20.0%5/5 files (100.05/5 files (100.0%)\n",
+      "  Found 1 correct series.\n",
+      "Reading DICOM (loading data): 5/5  (100.0%)\n",
+      "Available metadata: odict_keys(['TransferSyntaxUID', 'SOPClassUID', 'SOPInstanceUID', 'StudyDate', 'SeriesDate', 'ContentDate', 'StudyTime', 'SeriesTime', 'ContentTime', 'Modality', 'Manufacturer', 'StudyDescription', 'SeriesDescription', 'PatientName', 'PatientID', 'PatientBirthDate', 'PatientSex', 'PatientWeight', 'StudyInstanceUID', 'SeriesInstanceUID', 'SeriesNumber', 'AcquisitionNumber', 'InstanceNumber', 'ImagePositionPatient', 'ImageOrientationPatient', 'SamplesPerPixel', 'Rows', 'Columns', 'PixelSpacing', 'BitsAllocated', 'BitsStored', 'HighBit', 'PixelRepresentation', 'RescaleIntercept', 'RescaleSlope', 'PixelData', 'shape', 'sampling'])\n",
+      "Shape of image array: (5, 512, 512)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the \"tcia-chest-ct\" directory\n",
+    "vol = imageio.volread(\"data/chest-ct/\")\n",
+    "\n",
+    "# Print image attributes\n",
+    "print('Available metadata:', vol.meta.keys())\n",
+    "print('Shape of image array:', vol.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Using volread() to load image volumes can be faster and more reliable than loading them in image-by-image. It also preserves image metadata where possible."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Field of view\n",
+    "- The amount of physical space covered by an image is its field of view, which is calculated from two properties:\n",
+    "\n",
+    "1. Array shape, the number of data elements on each axis. Can be accessed with the shape attribute.\n",
+    "2. Sampling resolution, the amount of physical space covered by each pixel. Sometimes available in metadata (e.g., meta['sampling']).\n"
    ]
   },
   {
